--- a/index.html
+++ b/index.html
@@ -330,7 +330,10 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="cta-text">
                                 <h4>Find us</h4>
-                                <span>39, Maharani Bagh, GMS Road, Dehradun</span>
+                                <span>39, Maharani Bagh, GMS Road, Dehradun <br>
+                                    <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get directions on map</a>
+                                </span>
+
                             </div>
                         </div>
                     </div>
@@ -339,7 +342,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>Do not CALL US</span>
+                                <span>+91-7895977777</span>
                             </div>
                         </div>
                     </div>
@@ -354,62 +357,62 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-content pt-5 pb-5">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4 mb-50">
-                        <div class="footer-widget">
-                            <div class="footer-logo">
-                                <a href="index.html"><img src="https://i.ibb.co/QDy827D/ak-logo.png" class="img-fluid" alt="logo"></a>
-                            </div>
-                            <div class="footer-text">
-                                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
-                                elit,Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <div class="footer-social-icon">
-                                <span>Follow us</span>
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                        <div class="footer-widget">
-                            <div class="footer-widget-heading">
-                                <h3>Useful Links</h3>
-                            </div>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
-                                <li><a href="#">services</a></li>
-                                <li><a href="#">portfolio</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Expert Team</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Latest News</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                        <div class="footer-widget">
-                            <div class="footer-widget-heading">
-                                <h3>Subscribe</h3>
-                            </div>
-                            <div class="footer-text mb-25">
-                                <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
-                            </div>
-                            <div class="subscribe-form">
-                                <form action="#">
-                                    <input type="text" placeholder="Email Address">
-                                    <button><i class="fab fa-telegram-plane"></i></button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="footer-content pt-5 pb-5">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xl-4 col-lg-4 mb-50">-->
+<!--                        <div class="footer-widget">-->
+<!--                            <div class="footer-logo">-->
+<!--                                <a href="index.html"><img src="https://i.ibb.co/QDy827D/ak-logo.png" class="img-fluid" alt="logo"></a>-->
+<!--                            </div>-->
+<!--                            <div class="footer-text">-->
+<!--                                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing-->
+<!--                                elit,Lorem ipsum dolor sit amet.</p>-->
+<!--                            </div>-->
+<!--                            <div class="footer-social-icon">-->
+<!--                                <span>Follow us</span>-->
+<!--                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>-->
+<!--                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>-->
+<!--                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">-->
+<!--                        <div class="footer-widget">-->
+<!--                            <div class="footer-widget-heading">-->
+<!--                                <h3>Useful Links</h3>-->
+<!--                            </div>-->
+<!--                            <ul>-->
+<!--                                <li><a href="#">Home</a></li>-->
+<!--                                <li><a href="#">about</a></li>-->
+<!--                                <li><a href="#">services</a></li>-->
+<!--                                <li><a href="#">portfolio</a></li>-->
+<!--                                <li><a href="#">Contact</a></li>-->
+<!--                                <li><a href="#">About us</a></li>-->
+<!--                                <li><a href="#">Our Services</a></li>-->
+<!--                                <li><a href="#">Expert Team</a></li>-->
+<!--                                <li><a href="#">Contact us</a></li>-->
+<!--                                <li><a href="#">Latest News</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">-->
+<!--                        <div class="footer-widget">-->
+<!--                            <div class="footer-widget-heading">-->
+<!--                                <h3>Subscribe</h3>-->
+<!--                            </div>-->
+<!--                            <div class="footer-text mb-25">-->
+<!--                                <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>-->
+<!--                            </div>-->
+<!--                            <div class="subscribe-form">-->
+<!--                                <form action="#">-->
+<!--                                    <input type="text" placeholder="Email Address">-->
+<!--                                    <button><i class="fab fa-telegram-plane"></i></button>-->
+<!--                                </form>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
         <div class="copyright-area">
             <div class="container">
